19990830-14:25 GMT+1 Victor Szel <info@szelvesz.hu>

  * tests/working/rtl_test.prg
    + Added the possibility to test expressions resulting in a runtime error.
    + Added ABS(), EXP(), operator tests, some runtime error tests.
    * Some bugs fixed, some enhancements.
  * include/errorapi.h
    source/rtl/errorapi.c
    ! hb_errRT_TERM now accept the OS code parameter.
  * source/rtl/set.c
    ! Open error now shows the correct error codes for SET_PRINTFILE,
      and SET_EXTRAFILE. The error message made completely Clipper compatible.
      Retry and Default now works.
  * source/rtl/arrays.c
    ! Fixed two error messages ("AEVAL" -> "(AEVAL() function)")
      UNDONE.
  * source/rtl/classes.c
    - Removed some externs not needed anymore.
  * include/set.h
    * Cleaned up.
  * source/rtl/set.c
    source/rtl/dates.c
    source/rtl/transfrm.c
    source/rtl/strings.c
    source/rtl/inkey.c
    source/rtl/setcolor.c
    source/rtl/console.c
    source/rtl/mouseapi.c
    source/rtl/filesys.c
    * Formatting errors corrected.

19990830-10:40 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/errorapi.c
    include/errorapi.h
    + Error launcher with substitution added.
    + Added an emulation to the Clipper "Processor stack fault" error to 
      indicate the situation where there is an error in the error handler 
      itself, and thus infinite recursive calls are being executed. The 
      Harbour error message gives a better idea about the problem than in 
      Clipper.
  * source/vm/hvm.c
    ! hb_vmEqual() - Exact error message now depends on the bExact setting.
      (1070 vs. 1071)
  * source/vm/hvm.c
    ! hb_vmNegate() - Throws a proper runtime error, instead of an internal 
      error. (like Clipper)
      ( -("1") )
  * source/compiler/harbour.y
    + Added compile time parameter check for LOCK() (BTW, there should be no 
      parameter passed.)
  * source/rtl/copyfile.c
    ! Fixed one error code (2012 -> 2016).
    ! Two QUESTION: removed.